corrigindo texto do button

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <li>James Cromwell</li>
                     <li>Daniel Studi</li>
                 </ul>
-                <button><a href="http://www.adorocinema.com/filmes/filme-42151/trailer-19489182/" target="_blank">Assistir trailer do filme</a></button> 
+                <button><a href="http://www.adorocinema.com/filmes/filme-42151/trailer-19489182/" target="_blank">Assistir ao trailer do filme</a></button> 
                 </div>
             </div>
         </section>
